--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preload" as="image" href="/photo_2025-02-18_15-14-33.jpg" />
     <link rel="preload" as="image" href="/photo_2025-02-18_15-16-12.jpg" />
     <link rel="preload" as="image" href="/pexels-ivan-samkov-7621020.jpg" />
+    <link rel="preload" as="image" href="/phone.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
